--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 body {
+
     font-family: 'Courier New', Courier, monospace;
+
     margin: 0;
     padding: 0;
+
     display: flex;
     flex-direction: column; /* stack img on top of each other */
-    align-items: center; /* stack horizontally */
-    background: linear-gradient(to bottom, #654321, #1a0a0a 60%, #000 100%);
+    align-items: center; /* align horizontally */
+
+    /* before: "background: linear-gradient(to bottom, #654321, #1a0a0a 60%, #000 100%);" */
+    
+    height: 100vp; /* viewport */
+    background-image: url(img/sky.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
 }
-h {
-    font-size: 300%;
-    text-shadow: 10px 5px 5px rgba(0, 0, 0, 0.8);
+h2 {
+    font-size: 500%;
+    text-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
 }
 
 .row {
@@ -30,7 +41,10 @@ img {
     height: auto;
     border-radius: 8px;
             /*   x,  y, blur,  color */
-    box-shadow: 4px 8px 20px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
+}
+img:hover {
+    box-shadow: 0px 0px 50px rgba(150, 150, 150, 1);
 }
 
 .bars {
